boards: Add mboot target to CUSTOM_PYBD_SF2.
Signed-off-by: Damien George <damien@micropython.org>

--- a/boards/CUSTOM_PYBD_SF2/Makefile
+++ b/boards/CUSTOM_PYBD_SF2/Makefile
@@ -30,5 +30,12 @@ firmware:
 		BOARD_DIR=$(BOARD_DIR) \
 		BUILD=$(BUILD)
 
+mboot:
+	$(Q)$(MAKE) -C $(MICROPY_TOP)/ports/stm32/mboot \
+		PROJECT_TOP=$(abspath ../..) \
+		BOARD=$(BOARD) \
+		BOARD_DIR=$(BOARD_DIR) \
+		BUILD=$(BUILD)-mboot
+
 deploy:
 	$(PYTHON) $(MICROPY_TOP)/tools/pydfu.py -u $(BUILD)/firmware.dfu
